[package]
name = "advent2024"
version = "0.1.0"
authors = ["Hady Walied <hadywaliedkamel@gmail.com>"]
edition = "2021"

[lib]
bench = false


[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"

[dev-dependencies]
bencher = { version = "2.7.2", package = "codspeed-bencher-compat" }
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "bench_1"
harness = false